<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#CFD8DC"
    tools:context=".MainActivity">

    <RelativeLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/sequenceTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Welcome"
            android:layout_centerHorizontal="true"
            android:padding="4dp"/>

        <RelativeLayout
            android:id="@+id/relativeLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_margin="30dp"
            android:background="@android:color/white">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toLeftOf="@+id/divider_view"
                android:padding="8dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/currentScore"/>

                <TextView
                    android:id="@+id/current_text_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="0"
                    android:textColor="@android:color/black"
                    android:textAlignment="center" />


            </LinearLayout>

            <View
                android:id="@+id/divider_view"
                android:layout_width="1dp"
                android:layout_height="40dp"
                android:layout_centerHorizontal="true"
                android:layout_margin="16dp"
                android:background="@android:color/darker_gray">

            </View>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@+id/divider_view"
                android:padding="8dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/HighScore" />

                <TextView
                    android:id="@+id/high_text_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="0"
                    android:textColor="@android:color/black"
                    android:textAlignment="center" />

            </LinearLayout>

        </RelativeLayout>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:src="@drawable/heads"
            android:id="@+id/coin_image_view"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="35dp"/>

        <RelativeLayout
            android:id="@+id/rlcoin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/coin_image_view">

            <ImageView
                android:id="@+id/arrow_image_view"
                android:layout_width="40dp"
                android:layout_height="35dp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="15dp"/>

            <ImageView
                android:id="@+id/empty_image_view"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="15dp"/>

            <TextView
                android:id="@+id/slide_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=" "
                android:textAlignment="center"
                android:layout_centerInParent="true"
                android:layout_below="@id/empty_image_view"/>

        </RelativeLayout>

    </RelativeLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RadioGroup
            android:id="@+id/predict_radio_group"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">

            <RadioButton
                android:id="@+id/heads"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:background="@drawable/custom_radio"
                android:button="@android:color/transparent"
                android:text="@string/heads"
                android:layout_marginRight="32dp"
                android:textAlignment="center"
                android:onClick="selectHeads"/>

            <RadioButton
                android:id="@+id/tails"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:background="@drawable/custom_radio"
                android:button="@android:color/transparent"
                android:text="@string/tails"
                android:textAlignment="center"
                android:onClick="selectTails"/>

        </RadioGroup>

        <TextView
            android:id="@+id/predict_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tapToPredict"
            android:textAlignment="center"
            android:layout_marginTop="10dp"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <ImageView
                android:id="@+id/match_image_view"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_centerInParent="true"/>
            <TextView
                android:id="@+id/outcome_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:textAlignment="center"
                android:textColor="@android:color/white"/>

        </RelativeLayout>

    </LinearLayout>


</LinearLayout>
